# rift-mamba

./: .gitignore  README.md  pyproject.toml
examples/: ecommerce_churn_demo.py
experiments/: README.md  common.py  run_dfs_lightgbm.py  run_dfs_mlp.py  run_external_baseline.py  run_rift.py  run_rift_link.py  summarize_results.py
rift_mamba/: __init__.py  adapters.py  backends.py  baselines.py  basis.py  coefficients.py  dataset.py  experiment.py  layout.py  metrics.py  nn.py  preprocessing.py  pretraining.py  recommendation.py  records.py  relbench_v1_loader.py  relbench_v2_loader.py  routes.py  schema.py  semantic.py  sequence_preprocessing.py  sequences.py  splits.py  sql.py  task.py  time.py  trainer.py
tests/: test_rift_mamba.py
